# simple-graphics-rs

./: .gitignore  Cargo.toml  README.md
src/: args.rs  main.rs
src/ps/: parser.rs  ps.pest
src/smf/: parser.rs  smf.pest
src/transform_2d/: fill.rs  mod.rs  transform.rs
src/transform_3d/: face.rs  mod.rs  model.rs  polygon.rs  projection.rs  vertex.rs
