[package]
name = "simple-graphics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
nalgebra = "0.31.3"
itertools = "0.10.5"

